--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -8,7 +8,7 @@
                 </header>
                 <div class="item-1 d-flex justify-content-center">
                     <div  class="card d-flex justify-content-center">
-                        <div class="thumb w-100 p-4 d-flex justify-content-center" style="">
+                        <div class="thumb w-100 p-4 d-flex justify-content-center">
                             <img src="{{blog.img.url}}" class="blog_img">
                         </div>
                             <article>
@@ -17,48 +17,38 @@
                         </div>
                     </div>
                 </div>
-                {% comment %} <div class="comments-section">
-                    <h2>Comments</h2>
-                    {% for comment in post_comments %}
-                        <div class="comment">
-                            <p>{{ comment.sender.get_username }}: {{ comment.message }}</p>
-                        </div>
-                    {% endfor %}
-            
-                    {% if user.is_authenticated %}
-                        <form method="post" action="{% url 'send_comment' slug=blog.slug %}">
-                            {% csrf_token %}
-                            <textarea name="message" placeholder="Add your comment" required></textarea>
-                            <input type="hidden" name="post_id" value="{{ blog.id }}">
-                            <button type="submit">Submit Comment</button>
-                        </form>
-                    {% else %}
-                        <p>Login to leave a comment.</p>
-                    {% endif %}
-                </div> {% endcomment %}
+                {% comment %} 
+                    <div class="comments-section">
+                        <h2>Comments</h2>
+                        {% for comment in post_comments %}
+                            <div class="comment">
+                                <p>{{ comment.sender.get_username }}: {{ comment.message }}</p>
+                            </div>
+                        {% endfor %}
+                
+                        {% if user.is_authenticated %}
+                            <form method="post" action="{% url 'send_comment' slug=blog.slug %}">
+                                {% csrf_token %}
+                                <textarea name="message" placeholder="Add your comment" required></textarea>
+                                <input type="hidden" name="post_id" value="{{ blog.id }}">
+                                <button type="submit">Submit Comment</button>
+                            </form>
+                        {% else %}
+                            <p>Login to leave a comment.</p>
+                        {% endif %}
+                    </div> 
+                {% endcomment %}
     <div class="blog_block_2 container">
+        {% for post in latestpost_list %}
         <div class="blog-post-card ad_block1">
             <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
-            <h2>Another Blog Post Title</h2>
-            <p class="post-meta">By Author | Date</p>
-            <p class="post-excerpt">A brief excerpt from another blog post...</p>
+            <h2>{{post.title}}</h2>
+            <p class="post-meta">By {{post.author.first_name}} {{post.author.last_name}} | {{post.post_date}}</p>
+            <p class="post-excerpt">{{post.meta_description}}</p>
             <a href="#" class="read-more-btn">Read More</a>
         </div>
-        <div class="blog-post-card ad_block1">
-            <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
-            <h2>Another Blog Post Title</h2>
-            <p class="post-meta">By Author | Date</p>
-            <p class="post-excerpt">A brief excerpt from another blog post...</p>
-            <a href="#" class="read-more-btn">Read More</a>
-        </div>
-        <div class="blog-post-card ad_block1">
-            <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
-            <h2>Another Blog Post Title</h2>
-            <p class="post-meta">By Author | Date</p>
-            <p class="post-excerpt">A brief excerpt from another blog post...</p>
-            <a href="#" class="read-more-btn">Read More</a>
-        </div>
+        {% endfor %}
 </div>
 </div>
-    {% endblock content %}
+{% endblock content %}
 
