--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@200&family=Roboto&display=swap');
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(57, 35, 24, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 #google_translate_element .goog-te-gadget div select{
   color: #392318 !important;
   background-color: white;
@@ -270,7 +274,7 @@ body {
   padding-bottom: 50px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .w-30{
     display: none!important;
   }
@@ -286,6 +290,36 @@ body {
   .footer_social{
     display: inline!important;
   }
+  .home_img{
+    width: 100%!important;
+  }
+  .navbar-brand{
+    width: 80%!important;
+  }
+
+  .navbar-expand-xl .navbar-toggler {
+    display: block;
+  }
+
+  .w-60{
+    width: 75%!important;
+  }
+
+/* .navbar-expand-md .navbar-toggler {
+                display: block;
+            }
+            .navbar-expand-md .navbar-collapse {
+                display: none !important;
+            }
+            .navbar-expand-md .navbar-toggler.collapsed:hover {
+                background-color: #392318;
+            }
+            .navbar-expand-md .navbar-collapse {
+                display: none;
+            }
+            .navbar-expand-md.navbar-show {
+                display: block !important;
+            } */
 }
 
 .blog_block_1{
@@ -372,4 +406,9 @@ body {
 .search_blog_img{
   width: 60% !important;
   padding-right: 20px !important;
+}
+
+.navbar-brand{
+  width: 35%;
+  margin-right: 0;
 }
